# two_scara_collaboration

./: CMakeLists.txt  package.xml
cfg/: wrench_dyn_reconf.cfg
config/: testsaved
launch/: initialize.launch  initialize.world  motion_planners.launch  sawyer_world_collaboration.launch  scara_robot_controller.launch  withsawyer_initialize.launch
src/: claim_n_track_onion.cpp  cylinder_active_pool.cpp  cylinder_blocks_poses_publisher.cpp  cylinder_blocks_spawner.cpp  scara_joint_controller.cpp  scara_left_motion_planner.cpp  scara_right_motion_planner.cpp
src/ros_sorting_task/: ros_sorting_task.cbp  ros_sorting_task.layout
srv/: claim_track.srv
urdf/: Onion0.urdf  OnionCenter.urdf  conveyor_belt.urdf  debug.urdf  red_cylinder.urdf  virtual_wall.urdf  virtual_wall_1.urdf  virtual_wall_2.urdf
urdf/textures/: repeated.material
worlds/: initialize.world
